--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width" />
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="./manifest.json">
         <title>Index</title>
     </head>
     <body>
@@ -25,7 +25,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript">
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/serviceworker.js');
+        navigator.serviceWorker.register('./serviceworker.js');
 
         navigator.serviceWorker.ready
             .then(function (registration) {
