--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         navigator.serviceWorker.ready
             .then(function (registration) {
                 console.log(registration);
-                return registration.pushManager.subscribe({ userVisibleOnly: true });
+                registration.pushManager.subscribe({ userVisibleOnly: true });
             })
             .then(function (subscription) {
                 console.log('GCM EndPoint is:' + subscription.endpoint);
