--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             navigator.serviceWorker.ready
                 .then(function (registration) {
                     console.log(registration);
-                    return registration.pushManager.subscribe({ userVisibleOnly: true });
+                    return registration.pushManager.subscribe({
+                        userVisibleOnly: true,
+                        applicationServerKey: "AAAAACE0m5o:APA91bEL_976d4rKro2cJBLb-Yfmk3x5gxNenqTTiqmUE74AW7MvqD6BeCmhvMIbFmBa0ReHj3Y2Qgk0gYYyyP5nxUs1rUPgQq827Zl4en2IRL4L5rCPEHjgdKLE2sVO3bESlW2Ct9OT"
+                    });
                 })
                 .then(function (subscription) {
                     console.log('GCM EndPoint is:' + subscription.endpoint);
