--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <html>
     <head>
         <meta name="viewport" content="width=device-width" />
@@ -43,6 +43,21 @@
                     //var curlCommand = 'curl --header "Authorization: key=' + API_KEY + '" --header Content-Type:"application/json" ' + subscription.endpoint + ' -d "{\\"registration_ids\\":[\\"' + subscriptionId + '\\"]}"';
                 })
                 .catch(console.error.bind(console));
+        }
+
+        function urlB64ToUint8Array(base64String) {
+            const padding = '='.repeat((4 - base64String.length % 4) % 4);
+            const base64 = (base64String + padding)
+              .replace(/\-/g, '+')
+              .replace(/_/g, '/');
+
+            const rawData = window.atob(base64);
+            const outputArray = new Uint8Array(rawData.length);
+
+            for (let i = 0; i < rawData.length; ++i) {
+                outputArray[i] = rawData.charCodeAt(i);
+            }
+            return outputArray;
         }
     });
 </script>
