--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             navigator.serviceWorker.ready
                 .then(function (registration) {
                     console.log(registration);
-                    const applicationServerKey = urlB64ToUint8Array("AAAAACE0m5o:APA91bEL_976d4rKro2cJBLb-Yfmk3x5gxNenqTTiqmUE74AW7MvqD6BeCmhvMIbFmBa0ReHj3Y2Qgk0gYYyyP5nxUs1rUPgQq827Zl4en2IRL4L5rCPEHjgdKLE2sVO3bESlW2Ct9OT");
+                    const applicationServerKey = urlB64ToUint8Array("AIzaSyBp428bC9cNTTM70S4192IBWcQPsb2xE4k");
                     registration.pushManager.subscribe({
                         userVisibleOnly: true,
                         applicationServerKey: applicationServerKey
