--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
                     registration.pushManager.subscribe({
                         userVisibleOnly: true,
                         applicationServerKey: appkey
+                    }).then(function (subscription) {
+                        console.log('GCM EndPoint is:' + subscription.endpoint);
+                        $("#endpoint").append(subscription.endpoint);
+                        var auth = subscription.getKey('auth') ? btoa(String.fromCharCode.apply(null, new Uint8Array(subscription.getKey('auth')))) : '';
+                        console.log('User Auth is:' + auth);
+                        $("#userauth").append(auth);
+                        var pubpub = subscription.getKey('p256dh') ? btoa(String.fromCharCode.apply(null, new Uint8Array(subscription.getKey('p256dh')))) : '';
+                        $("#publickey").append(pubpub);
+                        console.log('User PublicKey is:' + pubpub);
+                        //var curlCommand = 'curl --header "Authorization: key=' + API_KEY + '" --header Content-Type:"application/json" ' + subscription.endpoint + ' -d "{\\"registration_ids\\":[\\"' + subscriptionId + '\\"]}"';
                     })
-                })
-                .then(function (subscription) {
-                    console.log('GCM EndPoint is:' + subscription.endpoint);
-                    $("#endpoint").append(subscription.endpoint);
-                    var auth = subscription.getKey('auth') ? btoa(String.fromCharCode.apply(null, new Uint8Array(subscription.getKey('auth')))) : '';
-                    console.log('User Auth is:' + auth);
-                    $("#userauth").append(auth);
-                    var pubpub = subscription.getKey('p256dh') ? btoa(String.fromCharCode.apply(null, new Uint8Array(subscription.getKey('p256dh')))) : '';
-                    $("#publickey").append(pubpub);
-                    console.log('User PublicKey is:' + pubpub);
-                    //var curlCommand = 'curl --header "Authorization: key=' + API_KEY + '" --header Content-Type:"application/json" ' + subscription.endpoint + ' -d "{\\"registration_ids\\":[\\"' + subscriptionId + '\\"]}"';
-                })
                 .catch(console.error.bind(console));
+                })
+                
         }
 
         function urlB64ToUint8Array(base64String) {
