--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title></title>
 </head>
 <body>
-    サービスワーカーを試すページです!<br>
-    まだサービスワーカーは動いていません！
+    Service Worker Test Page<br>
+    Service Worker is Stoped
 
     <p>GCM EndPoint</p>
     <p id="endpoint"></p>
